deploy GitHub pages

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://srap5664.github.io/fourty-days/"
+  "homepage": "https://srap5664.github.io/fourty-days/",
   "name": "react-test",
   "version": "0.1.0",
   "private": true,
